# power

./: .gitmodules  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: cmake.yml
example/: CMakeLists.txt  main.c  main.cpp
example/c/: main.c
example/c++/: main.cpp
glug_power/: CMakeLists.txt  bsd.cmake  common_src.cmake  haiku.cmake  linux.cmake  osx.cmake  windows.cmake
glug_power/cmake/: add_gluglib.cmake  config.cmake.in  detect_os.cmake
glug_power/include/glug/: power.h
glug_power/include/glug/power/: battery_status.h  power.h  power_supply.h  version.h.in
glug_power/include/glug/power/bindings/c++/: battery_status.hpp  power.hpp  power.inl  power_supply.hpp
glug_power/src/: CMakeLists.txt  battery_list.c  battery_list.h  battery_platform.h  battery_state_t.h  power.c  power_bridge.h  power_bridge_bsd.c  power_bridge_haiku.c  power_bridge_linux.c  power_bridge_osx.c  power_bridge_win.c  power_bridge_win32.c  power_platform.h
glug_power/src/iops/: ac.c  battery.c  iops.c  iops.h
glug_power/src/linux/: battery_node.c  battery_node.h  power.c  power.cpp
glug_power/src/macos/: battery_node.c  battery_node.h  power.c  power.cpp  scoped_cf.hpp
glug_power/src/sysctl/: ac.c  battery.c  sysctl.h
glug_power/src/sysfs/: ac.c  battery.c  sysfs.c  sysfs.h
glug_power/src/system_power_status/: ac.c  battery.c  system_power_status.c  system_power_status.h
glug_power/src/win32/: battery_node.c  power.c  power.cpp
glug_power/tests/: CMakeLists.txt  bridge-bsd.cmake  bridge-win.cmake  power.cmake  sysctl.cmake  system_power_status.cmake
glug_power/tests/mocks/: Windows.c  Windows.h
glug_power/tests/mocks/sys/: sysctl.h
glug_power/tests/mocks/sysctl/: sysctl.c
glug_power/tests/mocks/system_power_status/: system_power_status.c  system_power_status.h
glug_power/tests/suites/bridge/: bsd.c  win.c
glug_power/tests/suites/power/: power.c
glug_power/tests/suites/sysctl/: sysctl.c
glug_power/tests/suites/system_power_status/: system_power_status.c
test/: CMakeLists.txt  add_unit_test.cmake  tests.cmake
test/confs/: bridge-bsd.cmake  power.cmake  sysctl.cmake
test/suites/bridge/: bsd.c
test/suites/power/: power.c
test/suites/sysctl/: sysctl.c
test/unit/: power_stats.c  win32_power.c
test/unit/mocks/: ac.mock.c  ac.mock.h  battery_list.mock.c  battery_list.mock.h  windows.mock.h
test/utils/asserts/: battery_state.c  battery_state.h
test/utils/mocks/: power_bridge.c  power_bridge.h
test/utils/mocks/glug/: bool_t.h
test/utils/mocks/sys/: sysctl.c
test/utils/mocks/sysctl/: sysctl.h
